--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "framer-motion": "^10.16.4",
     "react-router-dom": "^6.8.1"
   },
+  "engines": {
+    "node": ">=18.18.0 <19.0.0",
+    "npm": ">=8.0.0"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
